--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
     "js-sha512": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
