--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.3",
     "@types/nodemailer": "^6.4.19",
     "nodemon": "^3.1.10",
@@ -44,6 +45,7 @@
     "express-session": "^1.18.2",
     "js-sha512": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.6",
     "pusher": "^5.2.0",
